# MTAPI

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Procfile  RAILWAY_DEPLOYMENT.md  README.md  app.py  docker-compose.yml  generate_stations_file.py  generate_stations_json.py  group_by_transfers.py  gunicorn.py  make_stations_csv.py  make_stations_json.py  manifest.yaml  mta_realtime.py  mtapi.py  nyct_subway_pb2.py  package.json  pyproject.toml  railway.json  requirements.txt  settings.cfg.sample  stations.csv  stations.json  transfers.txt  vercel.json
.github/workflows/: docker-image.yml
backend/: healthcheck.js  package.json  server.js
backend/api/: mta.js
data/: bus_stations.csv  bus_stations.json  stations.csv  stations.json
docs/: endpoints.md
frontend/: index.html  map.js  script.js  style.css
manifests/: manifest.yaml
mtapi/: __init__.py  _mtapithreader.py  mtapi.py  mtapi_bus.py
mtaproto/: feedresponse.py  gtfs-realtime.proto  gtfs_realtime_pb2.py  gtfs_realtime_pb2.pyi  nyct-subway.proto  nyct_subway_pb2.py  nyct_subway_pb2.pyi  update.sh
scripts/: make_bus_stations_csv.py  make_stations_csv.py  make_stations_json.py
server/: README.md  app.py  requirements.txt  settings.cfg
server/data/: bus_stations.json  stations.csv
server/mtapi/: mtapi.py
server/mtaproto/: feedresponse.py  gtfs_realtime_pb2.py  nyct-subway.proto  nyct_subway_pb2.py
server/scripts/: make_bus_stations_csv.py  make_bus_stations_json.py  (+1 more)
tests/: test_mtapi.py
webapp/: README.md  angular.json  karma.conf.js  package-lock.json  package.json
(+36 files in other folders)
